sound engine basic ecs framework

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -39,6 +39,7 @@
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/no-this-alias": "off",
+    "@typescript-eslint/no-namespace": "off",
     "comma-dangle": "off",
     "no-return-assign": "off",
     "yield-star-spacing": "off",
