--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-transform-async-to-generator": "^7.10.4",
+    "@babel/plugin-transform-regenerator": "^7.10.4",
+    "@babel/plugin-transform-typescript": "^7.11.0",
     "@babel/preset-env": "^7.9.5",
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
@@ -38,8 +41,11 @@
     "@typescript-eslint/eslint-plugin": "^3.4.0",
     "@typescript-eslint/parser": "^3.4.0",
     "babel-loader": "^8.1.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "commitizen": "^4.1.2",
+    "core-js": "^3.6.5",
     "cross-env": "^7.0.2",
+    "css-loader": "^4.3.0",
     "cz-conventional-changelog": "3.2.0",
     "electron": "^8.2.2",
     "electron-builder": "^22.7.0",
@@ -58,31 +64,25 @@
     "husky": "^4.2.5",
     "jest": "^26.1.0",
     "lint-staged": "^10.2.11",
-    "npm-run-all": "^4.1.5",
-    "prettier": "^2.0.5",
-    "ts-jest": "^26.1.1",
-    "typescript": "^3.9.5",
-    "wait-on": "^5.0.1",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3",
-    "@babel/plugin-transform-async-to-generator": "^7.10.4",
-    "@babel/plugin-transform-regenerator": "^7.10.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "core-js": "^3.6.5",
-    "css-loader": "^4.3.0",
     "log4js": "^6.3.0",
     "normalize.css": "^8.0.1",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-stretchable": "^1.1.2",
     "regenerator-runtime": "^0.13.7",
     "style-loader": "^1.2.1",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "ts-jest": "^26.1.1",
+    "typescript": "^3.9.5",
+    "wait-on": "^5.0.1",
+    "webpack": "^4.42.1",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-typescript": "^7.11.0",
     "@types/lodash": "^4.14.161",
     "@types/rot-js": "^2.0.1",
     "file-loader": "^6.1.0",
