--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,7 @@
       }
     ],
     "semi": 0,
+    "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/no-explicit-any": "off",
